# papurika

./: .flake8  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml
papurika/: __init__.py  channel.py  server.py  service.py
tests/: conftest.py  test_client.py  test_stream_stream.py  test_stream_unary.py  test_unary_stream.py  test_unary_unary.py
tests/pb/: test.proto  test_pb2.py  test_pb2_grpc.py
tests/wd/: helloworld_pb2.py
